[package]
name = "tuccflop"
version = "0.1.0"
authors = ["djdisodo <djdisodo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0"
uuid = { version = "1.3", features = ["v4"] }
whoami = "1.4.1"
loco = { git = "https://github.com/KiwiTalk/loco.rs" }
async-std = "1.6.3"
lazy_static = "1.4"

[dependencies.cursive]
git = "https://github.com/gyscos/cursive"
default-features = false
features = ["crossterm-backend"]
